[Fixes #9832125] Wrap feed name before it hits the subscribe button

--- a/app/stylesheets/_syndicate.sass
+++ b/app/stylesheets/_syndicate.sass
@@ -120,3 +120,7 @@
         background-color: #efefef
       &:hover
         background-color: $listingHover
+    
+    &.feed
+      .title
+        padding-right: 90px
